# imx296

./: CMakeLists.txt  Kbuild  Makefile  README.md  imx219_build.txt  imx296.c  l4t-gcc.cmake  rp_imx296.c
overlay/: tegra234-p3767-camera-p3768-dual-rp-imx296.dts  tegra234-p3767-camera-p3768-imx296-dual.dts
